[package]
name = "sdhci"
version = "0.1.0"
edition = "2021"
description = "SDHCI driver for Glenda Microkernel"

[dependencies]
glenda-drivers = { path = "../../../lib/libglenda_drivers-rs", package = "libglenda_drivers-rs" }
libglenda-rs = { path = "../../../lib/libglenda-rs", features = ["rt-service"] }
