[package]
name = "virtio-net"
version = "0.1.0"
description = "VirtIO-Net driver for Glenda Microkernel"
edition = "2021"

[dependencies]
libglenda-rs = { path = "../../../lib/libglenda-rs", features = ["rt-service"] }
libglenda_drivers-rs = { path = "../../../lib/libglenda_drivers-rs" }
virtio-common = { path = "../common" }
